--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <script>
       // A sua solução será escrita aqui!
-      function calcularTroco(precoDoProduto, dinheiroRecebido) {
+      function calcularTroco(precoDoProduto, dinheiroRecebido, estoque) {
         const cedulasDisponiveis = [100, 50, 20, 10, 5, 2, 1]
         let faltante = dinheiroRecebido - precoDoProduto
         let troco = []
@@ -35,25 +35,29 @@
     <script>
       // Testes - deepEqual para comparar arrays
       test('Sem troco', (assert) => {
-        const troco = calcularTroco(10, 10)
+        const estoque = { 100: 1, 50: 1, 20: 1, 10: 2, 5: 5, 2: 5, 1: 5 } 
+        const troco = calcularTroco(10, 10, estoque)
         const trocoEsperado = []
         assert.deepEqual(troco, trocoEsperado)
       })
 
       test('Troco do produto 486 e valor pago de 600', (assert) => {
+        const estoque = { 100: 1, 50: 1, 20: 1, 10: 2, 5: 5, 2: 5, 1: 5 } 
         const troco = calcularTroco(486, 600)
         const trocoEsperado = [100, 10, 2, 2]
         assert.deepEqual(troco, trocoEsperado)
       })
 
       test('Troco do produto 215 e valor pago de 300', (assert) => {
-        const troco = calcularTroco(215, 300)
+        const estoque = { 100: 1, 50: 1, 20: 1, 10: 2, 5: 5, 2: 5, 1: 5 } 
+        const troco = calcularTroco(215, 300, estoque)
         const trocoEsperado = [50, 20, 10, 5]
         assert.deepEqual(troco, trocoEsperado)
       })
 
       test('Troco do produto 110, valor pago 200, mas sem duas notas de 20', (assert) => {
-        const troco = calcularTroco(110, 200)
+        const estoque = { 100: 1, 50: 1, 20: 1, 10: 2, 5: 5, 2: 5, 1: 5 } 
+        const troco = calcularTroco(110, 200, estoque)
         const trocoEsperado = [50, 20, 10, 10]
         assert.deepEqual(troco, trocoEsperado)
       })
